welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: object Abs is not a member of package math
if (math.Abs(a-10)<math.Abs(b-10)){
         ^close10:2: error: object Abs is not a member of package math
if (math.Abs(a-10)<math.Abs(b-10)){
                        ^